// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WizardNavigationItem renders the default structure correctly 1`] = `
.c0.nav-link {
  display: block;
}

<li
  className="nav-item"
>
  <a
    className="c0 nav-link"
    href="#"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
  />
</li>
`;

exports[`WizardNavigationItem renders with children 1`] = `
.c0.nav-link {
  display: block;
}

<li
  className="nav-item"
>
  <a
    className="c0 nav-link"
    href="#"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
  >
    <div>
      My Child
    </div>
  </a>
</li>
`;
